# Bricks-Breaker-Remake

./: .gitignore  CMakeLists.txt  README.md
assets/boards/: level0.txt  level1.txt  level2.txt  level3.txt  level4.txt
assets/circular_boards/: level0.txt  level1.txt  level2.txt  level3.txt  level5.txt
include/: Ball.hpp  Board.hpp  Brick.hpp  Direction.hpp  Enums.hpp  Game.hpp  GameObject.hpp  Graphics.hpp  Paddle.hpp  Point.hpp  Vector.hpp  main.hpp
include/core/: App.hpp  EventManager.hpp  Game.hpp  Player.hpp
include/factories/: BallFactory.hpp  PowerFactory.hpp
include/gameobjects/: Ball.hpp  Board.hpp  Brick.hpp  GameObject.hpp  Paddle.hpp  Power.hpp
include/geometry/: Dimensions.hpp  Point.hpp  Vector.hpp
include/graphics/: Drawable.hpp  EventManager.hpp  FPS.hpp  Font.hpp  GraphicsManager.hpp  Renderer.hpp  Sound.hpp  Texture.hpp  TextureHelper.hpp
include/gui/: Button.hpp  EventListener.hpp  Image.hpp  Label.hpp  Screen.hpp  UiElement.hpp
include/input/: InputManager.hpp
include/resources/: Constants.hpp  Enums.hpp  LevelManager.hpp  ResourceHelper.hpp  ResourceManager.hpp
src/: Ball.cpp  Board.cpp  Brick.cpp  CMakeLists.txt  Game.cpp  GameObject.cpp  Graphics.cpp  Paddle.cpp  main.cpp
src/core/: App.cpp  EventManager.cpp  Game.cpp
src/factories/: BallFactory.cpp  PowerFactory.cpp
src/gameobjects/: Ball.cpp  Board.cpp  Brick.cpp  GameObject.cpp  Paddle.cpp  Power.cpp
src/graphics/: Drawable.cpp  EventManager.cpp  Font.cpp  GraphicsManager.cpp  Renderer.cpp  Texture.cpp
src/gui/: Button.cpp  GameOverScreen.cpp  GameScreen.cpp  Image.cpp  Label.cpp  LevelCompleteScreen.cpp  MainMenuScreen.cpp  Screen.cpp  UiElement.cpp
src/input/: InputManager.cpp
src/resources/: ResourceManager.cpp
